Fixed gap for issue --> Confusing message for when no baseline expression for tissues is reported.

--- a/web/src/main/webapp/resources/css/atlas.css
+++ b/web/src/main/webapp/resources/css/atlas.css
@@ -304,6 +304,10 @@ ul#gxaLocalNav a:hover, ul#gxaLocalNav a:active, ul#gxaLocalNav li.active a {
     min-height: 0px !important;
 }
 
+.gxaBlockWithoutPaddingBottom {
+    padding-bottom: 0px !important;
+}
+
 .block-max-width {
     max-width: 950px;
 }
